History Log Starts After Release 0.2.0

Release 0.2.dev
===============

Todo
----

* Audit model and view tests
* Write docstrings for __init__.py
* Audit model and view docstrings

Before uploading
----------------

* change release number in setup.py and Docs/source/conf.py
* upload new release with::
    
	python setup.py sdist bdist_dumb bdist_msi register upload
	
* if need be run python setup.py without register and upload and then upload them manually
	
* tag new release with::
    
	svn copy https://experimentdb.googlecode.com/svn/trunk/ \ 
	  https://experimentdb.googlecode.com/svn/tags/release-0.2/ \
      -m "Tagging the 0.2 release."