@@ -1,0 +1,16 @@
+"""The cloning app contains more detail about internally generated laboratory constructs.
+
+The cloning app defines the parameters for the synthesis and maintenance of constructs generated as part of an experiment.  Constructs can be generated via either cloning or mutagenesis and will result in a Cloning or Mutagenesis object respectively.
+
+The models in this app are:
+* Cloning
+* Mutagenesis
+
+The views in this app are:
+* cloning-new
+* mutagenesis-new
+* mutagenesis-detail
+* mutagenesis-edit
+* mutagenesis-list
+
+"""
