@@ -1,3 +1,16 @@
 """This package stores views for the data package.
 
+The active views are:
+
+* protocol-list
+* protocol-detail
+* protocol-new
+* protocol-edit
+* protocol-delete
+* experiment-new
+* result-new
+* experiment-edit
+* experiment-detail
+* experiment-list
+
 """
