@@ -5,13 +5,13 @@ from django.contrib.auth.decorators import permission_required
 from experimentdb.data.forms import ExperimentForm
 
 urlpatterns = patterns('',
-	(r'^new/$', 'django.views.generic.create_update.create_object', {
+	url(r'^new/$', 'django.views.generic.create_update.create_object', {
 		'form_class': ExperimentForm, 
 		'template_name': 'experiment_form.html', 
 		'login_required':True ,
-		}),
-	(r'^(?P<experimentID>[-\w]+)/$', 'experimentdb.data.views.experiment'),
-	(r'^(?P<experimentID>[-\w]+)/result/new/$', 'experimentdb.data.views.result_new'),
-	(r'^(?P<experimentID>[-\w]+)/edit/$', 'experimentdb.data.views.experiment_edit'),
-	(r'^$', 'experimentdb.data.views.index'),
+		}, name="experiment-new"),
+	url(r'^(?P<experimentID>[-\w]+)/$', 'experimentdb.data.views.experiment', name="experiment-detail),
+	url(r'^(?P<experimentID>[-\w]+)/result/new/$', 'experimentdb.data.views.result_new', name="result-new"),
+	url(r'^(?P<experimentID>[-\w]+)/edit/$', 'experimentdb.data.views.experiment_edit', name="experiment-edit"),
+	url(r'^$', 'experimentdb.data.views.index', name="experiment-list"),
 )
