@@ -1,0 +1,4 @@
+"""The datasets holds data about specified external datasets.
+
+The datasets app contains data and views for some external databases.  This may include external databases accessed directly or with a mirrored internal database.  This module is fairly research-interest specific and will likely be removed eventually.
+"""
