@@ -1,0 +1,32 @@
+"""The external package holds data regarding experimental contributors external to our group.
+
+The idea is to attribute particular models with references regarding external contacts or vendors or to link in specific references important to the experiments or projects.
+
+The two models in this app are:
+* Contact
+* Vendor
+* Reference
+
+The views used by this application are:
+
+In contact.py
+* contact-list
+* contact-edit
+* contact-detail
+* contact-delete
+* contact-new
+
+In reference.py
+* reference-list
+* reference-edit
+* reference-detail
+* reference-delete
+* reference-new
+
+In vendor.py
+* vendor-list
+* vendor-edit
+* vendor-detail
+* vendor-delete
+* vendor-new
+"""
