@@ -1,3 +1,27 @@
 """This folder contains the urlconf redirections for the external app.
 
-There is separate files for vendor, contact and reference urls."""
+There is separate files for vendor, contact and reference urls.
+
+The views used by this application are:
+
+In contact.py
+* contact-list
+* contact-edit
+* contact-detail
+* contact-delete
+* contact-new
+
+In reference.py
+* reference-list
+* reference-edit
+* reference-detail
+* reference-delete
+* reference-new
+
+In vendor.py
+* vendor-list
+* vendor-edit
+* vendor-detail
+* vendor-delete
+* vendor-new
+"""
