@@ -1,0 +1,23 @@
+"""This package describes the projects app.
+
+The intent of this app is to co-ordinate specific projects.  Projects are intended to be large, grant-sized larger projects in the laboratory.  Subprojects are intended to be smaller,  potentially paper sized groups of experiments.  An experiment can be part of one, none or several projects or subprojects.
+
+There are currently two models defined in experimentdb.projects.models:
+
+* Project
+* SubProject
+
+These models can be accessed with the following views:
+
+* project-list
+* project-detail
+* project-new
+* project-edit
+* project-delete
+* subproject-list
+* subproject-detail
+* subproject-new
+* subproject-edit
+* subproject-delete
+
+"""
