@@ -1,0 +1,15 @@
+"""This package describes url redirections for the projects app.
+
+There are views for:
+* project-list
+* project-detail
+* project-new
+* project-edit
+* project-delete
+* subproject-list
+* subproject-detail
+* subproject-new
+* subproject-edit
+* subproject-delete
+
+"""
