@@ -1,3 +1,12 @@
 """URLconfs for reagent models.
 
-In general these urls have the names model-list, model-detail, model-new, model-edit and model-delete."""
+In general these urls have the names model-list, model-detail, model-new, model-edit and model-delete.
+
+These urlconfs are subclassed into specific subpackages:
+* chemical.py
+* strain.py
+* construct.py
+* primer.py
+* cell.py
+* antibody.py
+"""
